# Vid2Photogrammetry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  buildPythonModule.sh  buildWindows.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pyinstaller.sh  pyinstallerWindows.sh  qtDarkTheme.hpp  resources.qrc  vid2photogrammetry.cpp
GUI/: basicGUI.ui  requirements.txt  testGui.ui  vid2photogrammetry.cp310-win_amd64.pyd  vid2photogrammetryGUI.py
cmdLineInterface/: CMakeLists.txt  main.cpp
libVid2Photogrammetry/: CMakeLists.txt
libVid2Photogrammetry/src/: commonFunctions.hpp  deleteNearDuplicates.cpp  deleteNearDuplicates.hpp  deleteOutliers.hpp  denoiseFrames.cpp  denoiseFrames.hpp  detectBlur.cpp  detectBlur.hpp  extractFrames.cpp  extractFrames.hpp  resizeFrames.cpp  resizeFrames.hpp  vid2photogrammetry.cpp  vid2photogrammetry.hpp
report/: report.tex  reportNewDesign.tex
report/designDiagrams/: structure
report/images/designDiagrams/: blurDetection  denoiseImages  extractFrames  fetchingValidatingInput  libraryStructure.drawio  libraryStructurePyBind11.drawio  overallAlgorithm.drawio  resizeImages
vid2Photogrammetry/: commonFunctions.hpp  deleteNearDuplicates.hpp  deleteOutliers.hpp  denoiseFrames.hpp  detectBlur.hpp  extractFrames.hpp  resizeFrames.hpp  vid2photogrammetry.hpp
